--- a/demo/src/main/res/layout/fragment_recycler_demo.xml
+++ b/demo/src/main/res/layout/fragment_recycler_demo.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragment.RecyclerDemoFragment">
+    tools:context="app.habitap.swipereveallayout.demo.fragment.RecyclerDemoFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
