--- a/demo/src/main/res/layout/fragment_swipe_reveal_layout_demo.xml
+++ b/demo/src/main/res/layout/fragment_swipe_reveal_layout_demo.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragment.SwipeRevealLayoutDemoFragment">
+    tools:context="app.habitap.swipereveallayout.demo.fragment.SwipeRevealLayoutDemoFragment">
 
     <androidx.constraintlayout.helper.widget.Flow
         android:id="@+id/flowButtons"
