--- a/demo/src/main/res/layout/grid_item.xml
+++ b/demo/src/main/res/layout/grid_item.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<io.github.rexmtorres.android.swipereveallayout.SwipeRevealLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<app.habitap.swipereveallayout.SwipeRevealLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/swipe_layout"
     android:layout_width="150dp"
@@ -40,4 +40,4 @@
 
     </FrameLayout>
 
-</io.github.rexmtorres.android.swipereveallayout.SwipeRevealLayout>
+</app.habitap.swipereveallayout.SwipeRevealLayout>
